<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/nav_home"
        android:label="@string/menu_home"
        android:name="com.example.bobo_hello.UI.SideNavigationItems.Home.HomeFragment"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_map"
        android:label="@string/map_nav"
        android:name="com.example.bobo_hello.UI.SideNavigationItems.Map.MapFragment"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.bobo_hello.UI.SideNavigationItems.Options.OptionsFragment"
        android:label="@string/menu_options"
        tools:layout="@layout/fragment_options" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.bobo_hello.UI.SideNavigationItems.AppInfo.AppInfoFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_app_info"
        android:name="com.example.bobo_hello.UI.SideNavigationItems.AppInfo.AppInfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_app_info" />
</navigation>