<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@color/bodyMain"
    android:layout_marginStart="@dimen/start_margin"
    android:layout_marginEnd="@dimen/start_margin"
    android:layout_marginTop="@dimen/start_margin"
    card_view:cardCornerRadius="2dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cityHisName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/city_name_tv"
            android:textAlignment="viewStart"
            android:textSize="@dimen/table_history_title_size" />

        <TextView
            android:id="@+id/lastTemperature"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/temperature_tv"
            android:textAlignment="center"
            android:textSize="@dimen/table_history_title_size" />

        <TextView
            android:id="@+id/lastUpdateData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/last_update_data_tv"
            android:textAlignment="center"
            android:textSize="@dimen/table_history_title_size" />
    </LinearLayout>

</androidx.cardview.widget.CardView>