<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/MapFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/appInfoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:lines="2"
        android:text="@string/InfoAppText"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/bodyMain"
        android:textSize="@dimen/choseCityText"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contactsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginTop="@dimen/start_margin"
        android:layout_marginEnd="@dimen/start_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appInfoTitle">

        <TextView
            android:id="@+id/appInfoText"
            android:text="@string/appInfoHelloText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/choseCityText"
            android:textColor="@color/DarkMain"
            app:layout_constraintStart_toEndOf="@id/avatarCV"
            app:layout_constraintEnd_toEndOf="@id/contactsLayout"
            app:layout_constraintBottom_toBottomOf="@id/contactsLayout"
            app:layout_constraintTop_toTopOf="@id/contactsLayout"
            android:layout_marginTop="@dimen/start_margin"
            android:layout_marginStart="@dimen/start_margin"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/avatarCV"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:layout_marginStart="@dimen/start_margin"
            android:layout_marginTop="@dimen/start_margin"
            android:layout_marginBottom="@dimen/start_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardCornerRadius="75dp"
            android:shape="ring"
            >

            <ImageView
                android:id="@+id/avatarImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/nav_header_desc"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/avatar" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/appInfoForFeedbackTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/my_contacts_for_feedback_and_suggestions"
        android:textAlignment="textStart"
        android:textSize="@dimen/choseCityText"
        android:layout_marginTop="@dimen/start_margin"
        android:layout_marginStart="@dimen/start_margin"
        app:layout_constraintEnd_toEndOf="@id/contactsLayout"
        app:layout_constraintStart_toStartOf="@id/contactsLayout"
        app:layout_constraintTop_toBottomOf="@id/contactsLayout" />

    <ImageView
        android:id="@+id/emailIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_dialog_email"
        app:layout_constraintStart_toStartOf="@id/appInfoForFeedbackTV"
        app:layout_constraintTop_toBottomOf="@id/appInfoForFeedbackTV"
        android:layout_marginTop="@dimen/start_margin"
        app:tint="@color/LightBlueMain"
        android:contentDescription="@string/emailicon" />

    <TextView
        android:id="@+id/appInfoEmailTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/email"
        android:textAlignment="textStart"
        android:textSize="@dimen/choseCityText"
        android:layout_marginTop="@dimen/start_margin"
        android:layout_marginStart="@dimen/start_margin"
        app:layout_constraintEnd_toEndOf="@id/contactsLayout"
        app:layout_constraintStart_toEndOf="@id/emailIcon"
        app:layout_constraintBottom_toBottomOf="@id/emailIcon"
        app:layout_constraintTop_toBottomOf="@id/appInfoForFeedbackTV" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_send_email"
        style="@style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/start_margin"
        android:contentDescription="@string/send_email"
        android:elevation="@dimen/start_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_email"
        app:tint="@color/white"
        app:backgroundTint="@color/colorPrimaryDark"/>

</androidx.constraintlayout.widget.ConstraintLayout>